--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,71 @@
-# Dependencies
+# Node dependencies
 node_modules/
 
 # Next.js build output
 .next/
-out/
 
 # Production build outputs
+out/
 dist/
 build/
 
-# Env files (keep secrets out of Git)
+# Environment variables (keep secrets out of Git)
 .env
+.env.*        # .env.local, .env.development, etc.
 .env*.local
+*.local
 
 # OS-specific cruft
 .DS_Store
 Thumbs.db
 
 # Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# TypeScript
+# TypeScript cache
 *.tsbuildinfo
 
-# Testing
+# Test coverage
 coverage/
 
-# VS Code settings folder
+# Editor settings
 .vscode/
+.idea/
 
 # Temporary files
 *.tmp
 *.swp
+
+# Temporary folders and caches
+.turbo/
+.cache/
+.eslintcache
+
+# Python artifacts
+__pycache__/
+*.py[cod]
+*.pyo
+.venv/
+
+# Misc generated files
+*.pid
+*.seed
+*.tgz
+
+# Optional: ignore lockfiles to force package re-resolution
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# Optional: ignore public uploads and secrets
+# public/uploads/
+secrets/
+
+# Optional: ignore schema artifacts if generated
+schema.json
+data/schema.json
+
